[gd_scene load_steps=5 format=3 uid="uid://cv5ogbi1qplcs"]

[ext_resource type="Script" path="res://Scripts/Branch.gd" id="1_q3k08"]
[ext_resource type="PackedScene" uid="uid://bmjo3dlcjk27x" path="res://Nodes/branchHook.tscn" id="2_oua1t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yucxm"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ogtp"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 0, 1)

[node name="Branch" type="Control" groups=["Branches"]]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_q3k08")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 97.0
offset_bottom = 43.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yucxm")

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0.25098, 0.596078, 0.388235, 0.635294)

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 10

[node name="BoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer/MarginContainer" groups=["BranchBox"]]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Highlight" type="PanelContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8ogtp")

[node name="TopHooks" type="Node2D" parent="."]

[node name="TopHook" parent="TopHooks" instance=ExtResource("2_oua1t")]
position = Vector2(50, -1)

[node name="BottomHooks" type="Node2D" parent="."]

[node name="BottomHook" parent="BottomHooks" instance=ExtResource("2_oua1t")]
position = Vector2(51, 45)
